[package]
name = "docker-uptime-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
bollard = "*"
teloxide = { version = "0.16.0", features = ["macros"] }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
log = "0.4.27"
once_cell = "1.21.3"